# br-edays19-lab

Documentation/: documentation-readme.txt
Lab1/: lab1-readme.txt
buildroot-2019.05/board/qemu/arm-versatile/: linux.config
buildroot-2019.05/configs/: qemu_arm_versatile_defconfig
buildroot-2019.05/package/: Config.in
buildroot-2019.05/package/hello-noser/: hello-noser.mk
edays-automake/: configure.ac
edays-automake/src/: Makefile.am  main.c
noser-external/: Config.in  external.desc  external.mk
noser-external/configs/: noser_defconfig
